--- a/index.css
+++ b/index.css
@@ -226,7 +226,7 @@ label svg:nth-of-type(1) {
     box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 0 0 rgba(0, 0, 0, 0);
     letter-spacing: inherit;
     text-shadow: 0 0 rgba(0, 0, 0, 0);
-    background: #FF3149;
+    background: #004A9D;
     border: none;
     outline: none;
     color: #ffffff;
