--- a/index.css
+++ b/index.css
@@ -52,6 +52,35 @@ canvas {
 #lifeAndCounter{
     position: absolute;
 }
+
+#story{
+    position: absolute;
+    top: 6%;
+    left: 5%;
+}
+#storyText{
+    display: none;
+}
+@media (max-width: 1060px) {
+    #story {
+        width: 640px !important;
+        left: 5%;
+    }
+}
+@media (max-width: 934px) {
+    #story {
+        display: none;
+    }
+    #storyText{
+        display: block;
+        color: #004A9D;
+        background: white;
+        padding: 5px 10px 5px 10px;
+        border-radius: 10px;
+        margin: 20px 25px 20px 25px;
+    }
+}
+
 .allContent{
     width: 100vw;
     height: 100vh;
