--- a/index.css
+++ b/index.css
@@ -187,17 +187,15 @@ label svg:nth-of-type(1) {
     display: none;
 }
 .statistics{
+    display: flex;
     text-align: center;
     position: absolute;
     top: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     width: 100vw;
     z-index: 5;
     background-color: rgba(0,0,0, .5);
-}
-.statistics.active{
-    display: flex;
 }
 .statistics__modal{
     width: 50%;
@@ -366,6 +364,16 @@ label svg:nth-of-type(1) {
     .life__item{
         width: 30px;
         height: 30px;
+    }
+    .statistics__modal{
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .statistics__modal h2{
+        margin: 10px;
+    }
+    .statistics button{
+        font-size: 1rem;
     }
 }
 
